--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   },
   "colors": {
     "header": {
-      "background": "CCCCCC",
+      "background": "777777",
       "text": "FFFFFF"
     },
     "subtotal": {
