--- a/config.json
+++ b/config.json
@@ -1,35 +1,54 @@
 {
-  "paginate": false,
-  "alignment": {
-    "global": "CENTER",
-    "header": "CENTER",
-    "content": {
-      "default": "CENTER",
-      "subtotal": "CENTER",
-      "numbers": "RIGHT",
-      "text": "CENTER"
+  "styles": {
+    "paginate": false,
+    "alignment": {
+      "global": "CENTER",
+      "header": "CENTER",
+      "content": {
+        "default": "CENTER",
+        "subtotal": "CENTER",
+        "numbers": "RIGHT",
+        "text": "CENTER"
+      }
+    },
+    "colors": {
+      "header": {
+        "background": "777777",
+        "text": "FFFFFF"
+      },
+      "subtotal_1": {
+        "background": "DDDDDD",
+        "text": "000000"
+      },
+      "subtotal_2": {
+        "background": "ADD8E6",
+        "text": "000000"
+      },
+      "grand_total": {
+        "background": "FFFF00",
+        "text": "000000"
+      },
+      "default": {
+        "background": "FFFFFF",
+        "text": "000000"
+      }
     }
   },
-  "colors": {
-    "header": {
-      "background": "777777",
-      "text": "FFFFFF"
+  "data": {
+    "csv_file_path": "/Users/ts-tousif.habib/Development/Repos/automatic-failure-verification/csv_export/full_report_240315_1124.csv",
+    "filters": {
+      "result": "failed"
     },
-    "subtotal_1": {
-      "background": "DDDDDD",
-      "text": "000000"
-    },
-    "subtotal_2": {
-      "background": "ADD8E6",
-      "text": "000000"
-    },
-    "grand_total": {
-      "background": "FFFF00",
-      "text": "000000"
-    },
-    "default": {
-      "background": "FFFFFF",
-      "text": "000000"
-    }
+    "group_cols": [
+      "feature",
+      "errorType",
+      "comment"
+    ],
+    "agg_func": "count",
+    "agg_col": "Count",
+    "subtotal_col": [
+      "feature",
+      "errorType"
+    ]
   }
 }
